# para-mlp

./: .gitignore  .pre-commit-config.yaml  README.md  arrange_model_json.py  arrange_model_json2.py  arrange_model_json3.py  main.py  pyproject.toml  requirements.txt  run_multiple_jobs.py  setup.cfg  setup.py
configs/: defaults.json  defaults_test.json  targets.json
configs/one_specie/: defaults.json  defaults_test.json
configs/paramagnetic/: defaults_test.json
configs/two_specie/: defaults.json  defaults_test.json
configs/use_augmented_data/: targets.json
configs/use_augmented_data/two_specie/: defaults.json
data/inputs/seko_input/: train.in  train_spin.in
data/inputs/structure/: fcc_supercell.json  nano_cluster.json
data/inputs/vaspruns/: test_vasprun_Fe  (+1 more)
data/processing/: force.npy
docs/: conf.py  formulation.md  index.rst  preprocess.md
para_mlp/: analyse.py  config.py  data_structure.py  featurize.py  model.py  pred.py  preprocess.py  train.py  utils.py
para_mlp/cpp/: lammps-copy.sh  makefile
para_mlp/scripts/: arrange_model_json.py  arrange_multiple_model_json.py  calc_spin_average.py  main.py  run_multiple_measure_prediction_accuracy.py  submit_jobs.py  test_spin_averaged_potential.py
tests/: conftest.py  test_analyse.py  test_data.py  test_file_io.py  test_model.py  test_pred.py  test_preprocess.py  test_train.py  test_utils.py
tests/configs/: targets.json
tests/processing/: energies_merged_kfold.npy  energies_merged_test.npy  forces_merged_kfold.npy  forces_merged_test.npy  types_list_merged_kfold.json  types_list_merged_test.json
(+10572 files in other folders)
