[metadata]
name = para-mlp-iwamura
version = 0.01
author = Taiki Iwamura
author_email = takki.0206@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iwamura-lab/para-mlp/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[option.packages.find]
where = src
