[metadata]
name = para_mlp
version = 0.01
author = Taiki Iwamura
author_email = takki.0206@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iwamura-lab/para-mlp/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 'para_mlp'
python_requires = >=3.7
